force-app/main/default/objects/WebsiteListingInquiry__c/WebsiteListingInquiry__c.object-meta.xml
<CustomObject>
    <label>Website Inquiry</label>
    <nameField>
        <label>Website Inquiry</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Website Inquiries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>