force-app/main/default/objects/WebsiteListingInquiry__c/fields/ListingPrice__c.field-meta.xml
<CustomField>
    <fullName>ListingPrice__c</fullName>
    <label>Listing Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>