force-app/main/default/objects/WebsiteListingInquiry__c/fields/ListingWebsite__c.field-meta.xml
<CustomField>
    <fullName>ListingWebsite__c</fullName>
    <label>Listing Website</label>
    <type>Url</type>
</CustomField>